Created break tags below the navbar section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarcollapse">
                     <div class="navbar-nav">
 
-                        <a href="#" class="nav-link active">Home</a>
+                        <a href="index.html" class="nav-link active">Home</a>
                         <a href="audi.html" class="nav-link">Audi</a>
                         <a href="mazda.html" class="nav-link">Mazda</a>
                         <a href="subaru.html" class="nav-link">Subaru</a>
@@ -64,6 +64,9 @@
         </div>
 
      </section>
+     <br>
+     <br>
+     
      
      <!-- carousel -->
 
