Added sticky top to the nav tag of the home page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 </head>
 <body>
-    <section class="row">
+   <section class="row">
         <div class="col-md-12">
-            <nav class="navbar bg-light navbar-light navbar-expand-md">
+            <nav class="navbar bg-light navbar-light navbar-expand-md sticky-top">
                 <a href="#" class="navbar-brand"><img src="" alt=""><b>Agent Motors</b></a>
 
                 <button class="navbar-toggler"
@@ -66,7 +66,8 @@
      </section>
      <br>
      <br>
-     
+
+
      
      <!-- carousel -->
 
